src/objects/Communications__c.object
<CustomObject>
    <description>This object is created to serve the business need of Internal Management Tool (IMT) Communications events/records.</description>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_of_POC__c</fullName>
        <label>Email of POC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Discussions__c</fullName>
        <label>Internal Discussions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OAS_Notification_Status__c</fullName>
        <label>OAS Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved by OAS</fullName>
                </value>
                <value>
                    <fullName>Form Submitted, Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Agencies_Entities_Involved__c</fullName>
        <label>Other Agencies/Entities Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PAO_Discussions__c</fullName>
        <label>PAO Discussions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSA_Comms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principals_Involved__c</fullName>
        <label>Principals Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region_SSO__c</fullName>
        <label>Region / SSO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OCR</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>OERR</fullName>
                </value>
                <value>
                    <fullName>OSBU</fullName>
                </value>
                <value>
                    <fullName>OAS</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OGP</fullName>
                </value>
                <value>
                    <fullName>PBS</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>OCIA</fullName>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>NCR</fullName>
                </value>
                <value>
                    <fullName>Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Central Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_in_Shared_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in IMT Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Activity__c</fullName>
        <label>Type of Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Reports/Rule Changes - grey</fullName>
                </value>
                <value>
                    <fullName>Conferences/Engagements (Media) - purple</fullName>
                </value>
                <value>
                    <fullName>Conferences/Training (No Media) - dark blue</fullName>
                </value>
                <value>
                    <fullName>Congressional - pink</fullName>
                </value>
                <value>
                    <fullName>Events/Exhibits (extended days) - green</fullName>
                </value>
                <value>
                    <fullName>FAS/Procurement - blue</fullName>
                </value>
                <value>
                    <fullName>Land Port of Entry (LPOE) expansion</fullName>
                </value>
                <value>
                    <fullName>PBS/Property Events - yellow</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Communications</label>
    <nameField>
        <label>Activity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Communications_End_Date_Not_Lesser</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Communications_Start_Date_End_Date_Diff</fullName>
        <active>true</active>
        <errorConditionFormula>( End_Date__c - Start_Date__c ) &gt; 5</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date should not be more than 5 days from Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(End_Date__c)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Please select the End Date value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Start_Date__c )</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Please select the Start Date value</errorMessage>
    </validationRules>
</CustomObject>